Refactor GlobalExceptionHandler to simplify error response collection